--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="container__calculator">
         <div class="container__calculator__upper-panel">12ss3</div>
-        <div class="container__calculator__lower-panel">123</div>
+        <div class="container__calculator__lower-panel">ZMIAN!!!!!!!!!!!!!!!!!!!!!!!!!!A123</div>
       </div>
     </div>
   </body>
