--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
   </head>
 
   <body>
-    <div class="container">
-      <div class="container__calculator">
-        <div class="container__calculator__upper-panel">12ss3</div>
-        <div class="container__calculator__lower-panel">ZMIAN!!!!!!!!!!!!!!!!!!!!!!!!!!A123</div>
-      </div>
-    </div>
+    <div class="container"></div>
   </body>
 </html>
